--- a/Practica2a/Index.html
+++ b/Practica2a/Index.html
@@ -8,6 +8,6 @@
 <body>
     
     <h1> Mi Primer subida por github desktop</h1>
-
+    <h2> Mi primer subida por github web a desktop</h2>
 </body>
 </html>
